[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/enemy/enemigo2.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/enemigo1.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/enemigo3.png" type="Texture" id=3]
[ext_resource path="res://assets/enemy/enemigo4.png" type="Texture" id=4]
[ext_resource path="res://assets/enemy/enemigo5.png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/enemigo6.png" type="Texture" id=6]
[ext_resource path="res://assets/enemy/enemigo7.png" type="Texture" id=7]
[ext_resource path="res://scenes/enemy/Enemy2.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 43.0439

[node name="Enemy2" type="Node2D"]
scale = Vector2( 1.7, 1.7 )
script = ExtResource( 8 )

[node name="AnimEnemy2" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
playing = true

[node name="AreaEnemy2" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionEnemy2" type="CollisionShape2D" parent="AreaEnemy2"]
shape = SubResource( 2 )

[node name="Stun2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Tween2" type="Tween" parent="."]
[connection signal="area_entered" from="AreaEnemy2" to="." method="_on_AreaEnemy2_area_entered"]
[connection signal="timeout" from="Stun2" to="." method="_on_Stun2_timeout"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween2_tween_completed"]
